# briscola.ai

./: .gitignore  AGENTS.md  PLAN.md  README.md  main.py  pyproject.toml  repro_payload.py
.github/workflows/: ci.yml
docs/reports/: model_progress.xlsx
scripts/: audit_event_log_games.py  benchmark_perf.py  build_model_report.py  evaluate_agents.py  evaluate_decision_quality.py  evaluate_matrix.py  evaluate_pimc.py  evaluate_round_robin.py  evaluate_value_lookahead.py  evaluate_value_lookahead_pair.py  evaluate_value_lookahead_quality.py  evaluate_value_ranking.py  export_ai_actions.py  export_dataset.py  fast_self_play.py  filter_pimc_teacher_subset.py  generate_pimc_leaf_value_dataset.py  generate_pimc_teacher_dataset.py  generate_value_dataset.py  generate_value_dataset_numba.py  inspect_event_log_game.py  report_event_log.py  run_experiment.py  self_play_to_db.py  simulate_games.py  train_a2c.py  train_bc.py  train_pg.py  train_value.py  train_value_pairwise.py  update_coverage_badge.py
seed_suites/: README.md  medium_5000.txt  small_1000.txt
src/briscola_ai/: __init__.py  main.py  versioning.py
src/briscola_ai/ai/: README.md  __init__.py  agents.py  bc_model_agent.py  decision_quality.py  endgame_solver.py  evaluation.py  evaluation_matrix.py  experiment_pipeline.py  fast_2p.py  fast_evaluation.py  fast_numba.py  fast_numba_observation.py  fast_observation_encoder.py  fast_self_play.py  model_catalog.py  model_provisioning.py
src/briscola_ai/backend/: __init__.py  dto.py  event_log.py  event_log_privacy.py  event_log_reader.py  game_store.py  observation_builder.py  server.py
src/briscola_ai/domain/: __init__.py  card_id.py  engine.py  models.py  observation.py  rules.py  serialization.py  state.py  (+1 more)
tests/: conftest.py  test_ai_evaluation.py  test_api_integration.py  test_audit_event_log_games.py  test_bc_model_agent.py  test_bc_model_agent_overkill_guard.py  test_build_model_report.py  test_card_tables_parity.py  test_curriculum.py  test_decision_quality.py  test_domain_endgame_cases.py  test_domain_invariants.py  test_domain_observation.py  test_domain_step_parity.py  test_dto.py  test_endgame_solver.py  test_evaluation_matrix.py  test_event_log.py  test_event_log_backends.py  test_event_log_privacy.py  test_event_log_reader.py  test_experiment_pipeline.py  test_export_ai_actions.py  test_export_dataset.py  test_fast_2p.py  test_fast_a2c_rollout.py  test_fast_encoder_v3_parity.py  test_fast_endgame_solver.py  test_fast_numba.py  test_fast_numba_observation.py  test_fast_self_play.py  test_game_basics.py  test_game_store.py  test_generate_pimc_teacher_dataset.py  test_heuristic_v2.py  test_hybrid_endgame_agent.py  test_model_provisioning.py  test_numba_endgame_solver.py  test_numba_value_lookahead.py  test_observation_encoder_v2.py  (+19 more)
(+49 files in other folders)
